experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/380/log-1-380.log

Test.java:130: error: incompatible types: possible lossy conversion from int to byte
        byte b = 208;
                 ^
Test.java:164: error: incompatible types: possible lossy conversion from float to long
                        jArr[i11] = jArr[i11] + this.fFld;
                                              ^
Test.java:196: error: incompatible types: possible lossy conversion from int to byte
                        b = i14;
                            ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

